// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .commitlintrc.json 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".",
  "extends": [
    "@commitlint/config-conventional",
  ],
  "rules": {
    "body-leading-blank": [
      2,
      "always",
    ],
  },
}
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .gitattributes 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

* text=auto eol=lf
/.commitlintrc.json linguist-generated
/.eslintrc.json linguist-generated
/.gitattributes linguist-generated
/.github/pull_request_template.md linguist-generated
/.github/workflows/auto-queue.yml linguist-generated
/.github/workflows/build.yml linguist-generated
/.github/workflows/copilot-setup-steps.yml linguist-generated
/.github/workflows/pull-request-lint.yml linguist-generated
/.github/workflows/release.yml linguist-generated
/.github/workflows/update-snapshots.yml linguist-generated
/.github/workflows/upgrade-main.yml linguist-generated
/.gitignore linguist-generated
/.husky/commit-msg linguist-generated
/.husky/pre-commit linguist-generated
/.husky/pre-push linguist-generated
/.lintstagedrc.json linguist-generated
/.mergify.yml linguist-generated
/.npmrc linguist-generated
/.prettierignore linguist-generated
/.prettierrc.json linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated
/eslint.config.mjs linguist-generated
/LICENSE linguist-generated
/package.json linguist-generated
/pnpm-lock.yaml linguist-generated
/tsconfig.json linguist-generated
/vitest.config.mts linguist-generated"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .github/pull_request_template.md 1`] = `"Fixes #"`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .github/workflows/auto-queue.yml 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

name: auto-queue
on:
  pull_request_target:
    types:
      - opened
      - reopened
      - ready_for_review
      - edited
    branches:
      - main
jobs:
  enableAutoQueue:
    name: "Set AutoQueue on PR #\${{ github.event.number }}"
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
      contents: write
    if: (contains(github.event.pull_request.labels.*.name, 'auto-approve')) && (github.event.action == 'opened' || (github.event.action == 'edited' && github.event.changes.base))
    steps:
      - uses: peter-evans/enable-pull-request-automerge@v3
        with:
          token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          pull-request-number: \${{ github.event.number }}
          merge-method: squash
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .github/workflows/build.yml 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

name: build
on:
  pull_request: {}
  workflow_dispatch: {}
jobs:
  build:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      self_mutation_happened: \${{ steps.self_mutation.outputs.self_mutation_happened }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Setup pnpm
        uses: pnpm/action-setup@v4
        with:
          version: "10"
      - name: Setup Node.js
        uses: actions/setup-node@v5
        with:
          node-version: 22.0.0
      - name: Install dependencies
        run: pnpm i --no-frozen-lockfile
      - name: build
        run: npx projen build
      - name: Find mutations
        id: self_mutation
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "self_mutation_happened=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        if: steps.self_mutation.outputs.self_mutation_happened
        uses: actions/upload-artifact@v4.6.2
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
      - name: Fail build on mutation
        if: steps.self_mutation.outputs.self_mutation_happened
        run: |-
          echo "::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch."
          cat repo.patch
          exit 1
  self-mutation:
    needs: build
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: always() && needs.build.outputs.self_mutation_happened && !(github.event.pull_request.head.repo.full_name != github.repository)
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Download patch
        uses: actions/download-artifact@v5
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Push changes
        env:
          PULL_REQUEST_REF: \${{ github.event.pull_request.head.ref }}
        run: |-
          git add .
          git commit -s -m "chore: self mutation"
          git push origin "HEAD:$PULL_REQUEST_REF"
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .github/workflows/copilot-setup-steps.yml 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

name: copilot-setup-steps
on:
  pull_request:
    paths:
      - .github/workflows/copilot-setup-steps.yml
  push:
    paths:
      - .github/workflows/copilot-setup-steps.yml
  workflow_dispatch: {}
jobs:
  copilot-setup-steps:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v5
      - name: Set up node.js
        uses: actions/setup-node@v4
        with:
          node-version: 22.x
      - name: Install pnpm
        uses: pnpm/action-setup@v4
        with:
          version: 10.x.x
      - name: Install dependencies
        run: pnpm i --frozen-lockfile
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .github/workflows/pull-request-lint.yml 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
  merge_group: {}
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')
    steps:
      - uses: amannn/action-semantic-pull-request@v6
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            chore
            docs
            feat
            fix
            refactor
            test
          requireScope: false
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .github/workflows/release.yml 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
concurrency:
  group: \${{ github.workflow }}
  cancel-in-progress: false
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Setup pnpm
        uses: pnpm/action-setup@v4
        with:
          version: "10"
      - name: Setup Node.js
        uses: actions/setup-node@v5
        with:
          node-version: 22.0.0
      - name: Install dependencies
        run: pnpm i --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
        shell: bash
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.6.2
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: 22.0.0
      - name: Download build artifacts
        uses: actions/download-artifact@v5
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_SHA 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .github/workflows/update-snapshots.yml 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

name: update-snapshots
on:
  workflow_dispatch: {}
jobs:
  update-snapshots:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    steps:
      - name: Checkout
        uses: actions/checkout@v5
      - name: Set up node.js
        uses: actions/setup-node@v4
        with:
          node-version: 22.x
      - name: Install pnpm
        uses: pnpm/action-setup@v4
        with:
          version: 10.x.x
      - name: Install dependencies
        run: pnpm i --frozen-lockfile
      - name: Update snapshots
        run: npx projen test:update-snapshots
      - name: Check for changes
        id: check_for_changes
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "has_changes=true" >> $GITHUB_OUTPUT
        shell: bash
      - name: Set git identity
        if: steps.check_for_changes.outputs.has_changes == 'true'
        run: |-
          git config user.email "github-actions@github.com"
          git config user.name "github-actions"
      - name: Commit and push changes
        if: steps.check_for_changes.outputs.has_changes == 'true'
        run: |-
          git commit -s -m "chore: updates snapshots" --no-verify
          git push origin \${{ github.ref_name }} --no-verify
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .github/workflows/upgrade-main.yml 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

name: upgrade-main
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 * * *
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    outputs:
      patch_created: \${{ steps.create_patch.outputs.patch_created }}
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          ref: main
      - name: Setup pnpm
        uses: pnpm/action-setup@v4
        with:
          version: "10"
      - name: Setup Node.js
        uses: actions/setup-node@v5
        with:
          node-version: 22.0.0
      - name: Install dependencies
        run: pnpm i --frozen-lockfile
      - name: Upgrade dependencies
        run: npx projen upgrade
      - name: Find mutations
        id: create_patch
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "patch_created=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        if: steps.create_patch.outputs.patch_created
        uses: actions/upload-artifact@v4.6.2
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    if: \${{ needs.upgrade.outputs.patch_created }}
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          ref: main
      - name: Download patch
        uses: actions/download-artifact@v5
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v7
        with:
          token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          commit-message: |-
            chore(deps): upgrade dependencies

            Upgrades project dependencies. See details in [workflow run].

            [Workflow Run]: \${{ github.server_url }}/\${{ github.repository }}/actions/runs/\${{ github.run_id }}

            ------

            *Automatically created by projen via the "upgrade-main" workflow*
          branch: github-actions/upgrade-main
          title: "chore(deps): upgrade dependencies"
          labels: auto-approve
          body: |-
            Upgrades project dependencies. See details in [workflow run].

            [Workflow Run]: \${{ github.server_url }}/\${{ github.repository }}/actions/runs/\${{ github.run_id }}

            ------

            *Automatically created by projen via the "upgrade-main" workflow*
          author: github-actions <github-actions@github.com>
          committer: github-actions <github-actions@github.com>
          signoff: true
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .gitignore 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/package.json
!/LICENSE
logs
*.log
npm-debug.log*
yarn-debug.log*
yarn-error.log*
lerna-debug.log*
report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
pids
*.pid
*.seed
*.pid.lock
lib-cov
coverage
*.lcov
.nyc_output
build/Release
node_modules/
jspm_packages/
*.tsbuildinfo
.eslintcache
*.tgz
.yarn-integrity
.cache
!/.github/workflows/build.yml
/dist/changelog.md
/dist/version.txt
!/.github/workflows/release.yml
!/.mergify.yml
!/.github/workflows/upgrade-main.yml
!/.github/pull_request_template.md
!/.prettierignore
!/.prettierrc.json
!/__tests__/
!/tsconfig.json
!/src/
/build
/dist/
!/.eslintrc.json
!/eslint.config.mjs
test-reports/
!/vitest.config.mts
!/.commitlintrc.json
!/.husky/commit-msg
!/.lintstagedrc.json
!/.husky/pre-commit
!/.husky/pre-push
!/.github/workflows/copilot-setup-steps.yml
!/.github/workflows/update-snapshots.yml
!/.github/workflows/auto-queue.yml
!/.npmrc
!/.projenrc.ts
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .husky/commit-msg 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

yarn commitlint --edit $1
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .husky/pre-commit 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

yarn lint-staged
yarn test:coverage
yarn compile
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .husky/pre-push 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

#!/bin/sh

CYAN="\\033[1;36m"
RED="\\033[1;31m"
GREEN="\\033[1;32m"
RESET="\\033[0m"

# Run projen
echo "\${CYAN}Verifying there are no uncommitted projen changes\${RESET}"
yarn projen

# Check for git changes
if git diff --quiet; then
  echo "\${GREEN}✅ No changes detected. Proceeding with commit.\${RESET}"
  exit 0
else
  echo "\${RED}❌ ERROR: Running 'yarn projen' resulted in file changes.\${RESET}"
  echo "\${RED}❌ Please commit these changes before proceeding.\${RESET}"
  exit 1
fi

"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .lintstagedrc.json 1`] = `
{
  "*.md": "yarn prettier --write",
  "*.ts": "yarn lint",
  "//": "~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".",
}
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .mergify.yml 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

queue_rules:
  - name: default
    update_method: merge
    queue_conditions:
      - "#approved-reviews-by>=1"
      - -label~=(do-not-merge)
      - status-success=build
    merge_method: squash
    commit_message_template: |-
      {{ title }} (#{{ number }})

      {{ body }}
pull_request_rules:
  - name: Automatic merge on approval and successful build
    actions:
      delete_head_branch: {}
      queue:
        name: default
    conditions:
      - "#approved-reviews-by>=1"
      - -label~=(do-not-merge)
      - status-success=build
merge_queue:
  max_parallel_checks: 1
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .npmrc 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

resolution-mode=highest"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .prettierignore 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .prettierrc.json 1`] = `
{
  "arrowParens": "avoid",
  "endOfLine": "lf",
  "overrides": [],
  "printWidth": 80,
  "semi": true,
  "singleQuote": true,
  "trailingComma": "all",
}
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .projen/deps.json 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".",
  "dependencies": [
    {
      "name": "@commitlint/cli",
      "type": "build",
    },
    {
      "name": "@commitlint/config-conventional",
      "type": "build",
    },
    {
      "name": "@eslint/js",
      "type": "build",
    },
    {
      "name": "@stylistic/eslint-plugin",
      "type": "build",
    },
    {
      "name": "@types/node",
      "type": "build",
      "version": "^22",
    },
    {
      "name": "@typescript-eslint/eslint-plugin",
      "type": "build",
      "version": "^8",
    },
    {
      "name": "@typescript-eslint/parser",
      "type": "build",
      "version": "^8",
    },
    {
      "name": "@vitest/coverage-v8",
      "type": "build",
    },
    {
      "name": "commit-and-tag-version",
      "type": "build",
      "version": "^12",
    },
    {
      "name": "constructs",
      "type": "build",
      "version": "^10.0.0",
    },
    {
      "name": "eslint",
      "type": "build",
    },
    {
      "name": "eslint-import-resolver-typescript",
      "type": "build",
    },
    {
      "name": "eslint-plugin-functional",
      "type": "build",
    },
    {
      "name": "eslint-plugin-import",
      "type": "build",
    },
    {
      "name": "eslint-plugin-perfectionist",
      "type": "build",
    },
    {
      "name": "husky",
      "type": "build",
    },
    {
      "name": "lint-staged",
      "type": "build",
    },
    {
      "name": "prettier",
      "type": "build",
    },
    {
      "name": "projen",
      "type": "build",
    },
    {
      "name": "ts-deepmerge",
      "type": "build",
    },
    {
      "name": "ts-node",
      "type": "build",
    },
    {
      "name": "typescript",
      "type": "build",
    },
    {
      "name": "typescript-eslint",
      "type": "build",
    },
    {
      "name": "vitest",
      "type": "build",
    },
  ],
}
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .projen/files.json 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".",
  "files": [
    ".commitlintrc.json",
    ".gitattributes",
    ".github/pull_request_template.md",
    ".github/workflows/auto-queue.yml",
    ".github/workflows/build.yml",
    ".github/workflows/copilot-setup-steps.yml",
    ".github/workflows/pull-request-lint.yml",
    ".github/workflows/release.yml",
    ".github/workflows/update-snapshots.yml",
    ".github/workflows/upgrade-main.yml",
    ".gitignore",
    ".husky/commit-msg",
    ".husky/pre-commit",
    ".husky/pre-push",
    ".lintstagedrc.json",
    ".mergify.yml",
    ".npmrc",
    ".prettierignore",
    ".prettierrc.json",
    ".projen/deps.json",
    ".projen/files.json",
    ".projen/tasks.json",
    "eslint.config.mjs",
    "LICENSE",
    "tsconfig.json",
    "vitest.config.mts",
  ],
}
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: .projen/tasks.json 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".",
  "env": {
    "PATH": "$(pnpm -c exec "node --print process.env.PATH")",
  },
  "tasks": {
    "build": {
      "description": "Full release build",
      "name": "build",
      "steps": [
        {
          "spawn": "default",
        },
        {
          "spawn": "pre-compile",
        },
        {
          "spawn": "compile",
        },
        {
          "spawn": "post-compile",
        },
        {
          "spawn": "test",
        },
        {
          "spawn": "package",
        },
      ],
    },
    "bump": {
      "condition": "git log --oneline -1 | grep -qv "chore(release):"",
      "description": "Bumps version based on latest git tag and generates a changelog entry",
      "env": {
        "BUMPFILE": "dist/version.txt",
        "BUMP_PACKAGE": "commit-and-tag-version@^12",
        "CHANGELOG": "dist/changelog.md",
        "OUTFILE": "package.json",
        "RELEASETAG": "dist/releasetag.txt",
        "RELEASE_TAG_PREFIX": "",
      },
      "name": "bump",
      "steps": [
        {
          "builtin": "release/bump-version",
        },
      ],
    },
    "clobber": {
      "condition": "git diff --exit-code > /dev/null",
      "description": "hard resets to HEAD of origin and cleans the local repo",
      "env": {
        "BRANCH": "$(git branch --show-current)",
      },
      "name": "clobber",
      "steps": [
        {
          "exec": "git checkout -b scratch",
          "name": "save current HEAD in "scratch" branch",
        },
        {
          "exec": "git checkout $BRANCH",
        },
        {
          "exec": "git fetch origin",
          "name": "fetch latest changes from origin",
        },
        {
          "exec": "git reset --hard origin/$BRANCH",
          "name": "hard reset to origin commit",
        },
        {
          "exec": "git clean -fdx",
          "name": "clean all untracked files",
        },
        {
          "say": "ready to rock! (unpushed commits are under the "scratch" branch)",
        },
      ],
    },
    "compile": {
      "description": "Only compile",
      "name": "compile",
      "steps": [
        {
          "exec": "tsc --build",
        },
      ],
    },
    "default": {
      "description": "Synthesize project files",
      "name": "default",
      "steps": [
        {
          "exec": "ts-node .projenrc.ts",
        },
      ],
    },
    "eject": {
      "description": "Remove projen from the project",
      "env": {
        "PROJEN_EJECTING": "true",
      },
      "name": "eject",
      "steps": [
        {
          "spawn": "default",
        },
      ],
    },
    "install": {
      "description": "Install project dependencies and update lockfile (non-frozen)",
      "name": "install",
      "steps": [
        {
          "exec": "pnpm i --no-frozen-lockfile",
        },
      ],
    },
    "install:ci": {
      "description": "Install project dependencies using frozen lockfile",
      "name": "install:ci",
      "steps": [
        {
          "exec": "pnpm i --frozen-lockfile",
        },
      ],
    },
    "lint": {
      "description": "Runs prettier eslint against the codebase",
      "name": "lint",
      "steps": [
        {
          "exec": "prettier --write --no-error-on-unmatched-pattern **/*.{ts,tsx} --ignore-path .gitignore",
          "receiveArgs": true,
        },
        {
          "exec": "eslint . --ext .ts,tsx -c ./eslint.config.mjs --fix --no-error-on-unmatched-pattern",
          "receiveArgs": true,
        },
      ],
    },
    "package": {
      "description": "Creates the distribution package",
      "name": "package",
      "steps": [
        {
          "exec": "mkdir -p dist/js",
        },
        {
          "exec": "pnpm pack --pack-destination dist/js",
        },
      ],
    },
    "post-compile": {
      "description": "Runs after successful compilation",
      "name": "post-compile",
    },
    "post-upgrade": {
      "description": "Runs after upgrading dependencies",
      "name": "post-upgrade",
    },
    "pre-compile": {
      "description": "Prepare the project for compilation",
      "name": "pre-compile",
    },
    "release": {
      "description": "Prepare a release from "main" branch",
      "env": {
        "RELEASE": "true",
      },
      "name": "release",
      "steps": [
        {
          "exec": "rm -fr dist",
        },
        {
          "spawn": "bump",
        },
        {
          "spawn": "build",
        },
        {
          "spawn": "unbump",
        },
        {
          "exec": "git diff --ignore-space-at-eol --exit-code",
        },
      ],
    },
    "test": {
      "description": "Run tests",
      "name": "test",
      "steps": [
        {
          "receiveArgs": true,
          "spawn": "lint",
        },
        {
          "receiveArgs": true,
          "spawn": "test:coverage",
        },
      ],
    },
    "test:coverage": {
      "description": "run tests with coverage",
      "name": "test:coverage",
      "steps": [
        {
          "exec": "vitest run --passWithNoTests --coverage",
          "receiveArgs": true,
        },
      ],
    },
    "test:update-snapshots": {
      "description": "run tests and update snapshots",
      "name": "test:update-snapshots",
      "steps": [
        {
          "exec": "vitest run ---u",
          "receiveArgs": true,
        },
      ],
    },
    "test:watch": {
      "description": "run tests in watch mode",
      "name": "test:watch",
      "steps": [
        {
          "exec": "vitest",
          "receiveArgs": true,
        },
      ],
    },
    "unbump": {
      "description": "Restores version to 0.0.0",
      "env": {
        "BUMPFILE": "dist/version.txt",
        "BUMP_PACKAGE": "commit-and-tag-version@^12",
        "CHANGELOG": "dist/changelog.md",
        "OUTFILE": "package.json",
        "RELEASETAG": "dist/releasetag.txt",
        "RELEASE_TAG_PREFIX": "",
      },
      "name": "unbump",
      "steps": [
        {
          "builtin": "release/reset-version",
        },
      ],
    },
    "upgrade": {
      "description": "upgrade dependencies",
      "env": {
        "CI": "0",
      },
      "name": "upgrade",
      "steps": [
        {
          "exec": "pnpm dlx npm-check-updates@16 --upgrade --target=minor --peer --no-deprecated --dep=dev,peer,prod,optional --filter=@commitlint/cli,@commitlint/config-conventional,@eslint/js,@stylistic/eslint-plugin,@vitest/coverage-v8,eslint,eslint-import-resolver-typescript,eslint-plugin-functional,eslint-plugin-import,eslint-plugin-perfectionist,husky,lint-staged,prettier,projen,ts-deepmerge,ts-node,typescript,typescript-eslint,vitest",
        },
        {
          "exec": "pnpm i --no-frozen-lockfile",
        },
        {
          "exec": "pnpm update @commitlint/cli @commitlint/config-conventional @eslint/js @stylistic/eslint-plugin @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser @vitest/coverage-v8 commit-and-tag-version constructs eslint eslint-import-resolver-typescript eslint-plugin-functional eslint-plugin-import eslint-plugin-perfectionist husky lint-staged prettier projen ts-deepmerge ts-node typescript typescript-eslint vitest",
        },
        {
          "exec": "npx projen",
        },
        {
          "spawn": "post-upgrade",
        },
      ],
    },
    "watch": {
      "description": "Watch & compile in the background",
      "name": "watch",
      "steps": [
        {
          "exec": "tsc --build -w",
        },
      ],
    },
  },
}
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: LICENSE 1`] = `
"
                                 Apache License
                           Version 2.0, January 2004
                        http://www.apache.org/licenses/

   TERMS AND CONDITIONS FOR USE, REPRODUCTION, AND DISTRIBUTION

   1. Definitions.

      "License" shall mean the terms and conditions for use, reproduction,
      and distribution as defined by Sections 1 through 9 of this document.

      "Licensor" shall mean the copyright owner or entity authorized by
      the copyright owner that is granting the License.

      "Legal Entity" shall mean the union of the acting entity and all
      other entities that control, are controlled by, or are under common
      control with that entity. For the purposes of this definition,
      "control" means (i) the power, direct or indirect, to cause the
      direction or management of such entity, whether by contract or
      otherwise, or (ii) ownership of fifty percent (50%) or more of the
      outstanding shares, or (iii) beneficial ownership of such entity.

      "You" (or "Your") shall mean an individual or Legal Entity
      exercising permissions granted by this License.

      "Source" form shall mean the preferred form for making modifications,
      including but not limited to software source code, documentation
      source, and configuration files.

      "Object" form shall mean any form resulting from mechanical
      transformation or translation of a Source form, including but
      not limited to compiled object code, generated documentation,
      and conversions to other media types.

      "Work" shall mean the work of authorship, whether in Source or
      Object form, made available under the License, as indicated by a
      copyright notice that is included in or attached to the work
      (an example is provided in the Appendix below).

      "Derivative Works" shall mean any work, whether in Source or Object
      form, that is based on (or derived from) the Work and for which the
      editorial revisions, annotations, elaborations, or other modifications
      represent, as a whole, an original work of authorship. For the purposes
      of this License, Derivative Works shall not include works that remain
      separable from, or merely link (or bind by name) to the interfaces of,
      the Work and Derivative Works thereof.

      "Contribution" shall mean any work of authorship, including
      the original version of the Work and any modifications or additions
      to that Work or Derivative Works thereof, that is intentionally
      submitted to Licensor for inclusion in the Work by the copyright owner
      or by an individual or Legal Entity authorized to submit on behalf of
      the copyright owner. For the purposes of this definition, "submitted"
      means any form of electronic, verbal, or written communication sent
      to the Licensor or its representatives, including but not limited to
      communication on electronic mailing lists, source code control systems,
      and issue tracking systems that are managed by, or on behalf of, the
      Licensor for the purpose of discussing and improving the Work, but
      excluding communication that is conspicuously marked or otherwise
      designated in writing by the copyright owner as "Not a Contribution."

      "Contributor" shall mean Licensor and any individual or Legal Entity
      on behalf of whom a Contribution has been received by Licensor and
      subsequently incorporated within the Work.

   2. Grant of Copyright License. Subject to the terms and conditions of
      this License, each Contributor hereby grants to You a perpetual,
      worldwide, non-exclusive, no-charge, royalty-free, irrevocable
      copyright license to reproduce, prepare Derivative Works of,
      publicly display, publicly perform, sublicense, and distribute the
      Work and such Derivative Works in Source or Object form.

   3. Grant of Patent License. Subject to the terms and conditions of
      this License, each Contributor hereby grants to You a perpetual,
      worldwide, non-exclusive, no-charge, royalty-free, irrevocable
      (except as stated in this section) patent license to make, have made,
      use, offer to sell, sell, import, and otherwise transfer the Work,
      where such license applies only to those patent claims licensable
      by such Contributor that are necessarily infringed by their
      Contribution(s) alone or by combination of their Contribution(s)
      with the Work to which such Contribution(s) was submitted. If You
      institute patent litigation against any entity (including a
      cross-claim or counterclaim in a lawsuit) alleging that the Work
      or a Contribution incorporated within the Work constitutes direct
      or contributory patent infringement, then any patent licenses
      granted to You under this License for that Work shall terminate
      as of the date such litigation is filed.

   4. Redistribution. You may reproduce and distribute copies of the
      Work or Derivative Works thereof in any medium, with or without
      modifications, and in Source or Object form, provided that You
      meet the following conditions:

      (a) You must give any other recipients of the Work or
          Derivative Works a copy of this License; and

      (b) You must cause any modified files to carry prominent notices
          stating that You changed the files; and

      (c) You must retain, in the Source form of any Derivative Works
          that You distribute, all copyright, patent, trademark, and
          attribution notices from the Source form of the Work,
          excluding those notices that do not pertain to any part of
          the Derivative Works; and

      (d) If the Work includes a "NOTICE" text file as part of its
          distribution, then any Derivative Works that You distribute must
          include a readable copy of the attribution notices contained
          within such NOTICE file, excluding those notices that do not
          pertain to any part of the Derivative Works, in at least one
          of the following places: within a NOTICE text file distributed
          as part of the Derivative Works; within the Source form or
          documentation, if provided along with the Derivative Works; or,
          within a display generated by the Derivative Works, if and
          wherever such third-party notices normally appear. The contents
          of the NOTICE file are for informational purposes only and
          do not modify the License. You may add Your own attribution
          notices within Derivative Works that You distribute, alongside
          or as an addendum to the NOTICE text from the Work, provided
          that such additional attribution notices cannot be construed
          as modifying the License.

      You may add Your own copyright statement to Your modifications and
      may provide additional or different license terms and conditions
      for use, reproduction, or distribution of Your modifications, or
      for any such Derivative Works as a whole, provided Your use,
      reproduction, and distribution of the Work otherwise complies with
      the conditions stated in this License.

   5. Submission of Contributions. Unless You explicitly state otherwise,
      any Contribution intentionally submitted for inclusion in the Work
      by You to the Licensor shall be under the terms and conditions of
      this License, without any additional terms or conditions.
      Notwithstanding the above, nothing herein shall supersede or modify
      the terms of any separate license agreement you may have executed
      with Licensor regarding such Contributions.

   6. Trademarks. This License does not grant permission to use the trade
      names, trademarks, service marks, or product names of the Licensor,
      except as required for reasonable and customary use in describing the
      origin of the Work and reproducing the content of the NOTICE file.

   7. Disclaimer of Warranty. Unless required by applicable law or
      agreed to in writing, Licensor provides the Work (and each
      Contributor provides its Contributions) on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
      implied, including, without limitation, any warranties or conditions
      of TITLE, NON-INFRINGEMENT, MERCHANTABILITY, or FITNESS FOR A
      PARTICULAR PURPOSE. You are solely responsible for determining the
      appropriateness of using or redistributing the Work and assume any
      risks associated with Your exercise of permissions under this License.

   8. Limitation of Liability. In no event and under no legal theory,
      whether in tort (including negligence), contract, or otherwise,
      unless required by applicable law (such as deliberate and grossly
      negligent acts) or agreed to in writing, shall any Contributor be
      liable to You for damages, including any direct, indirect, special,
      incidental, or consequential damages of any character arising as a
      result of this License or out of the use or inability to use the
      Work (including but not limited to damages for loss of goodwill,
      work stoppage, computer failure or malfunction, or any and all
      other commercial damages or losses), even if such Contributor
      has been advised of the possibility of such damages.

   9. Accepting Warranty or Additional Liability. While redistributing
      the Work or Derivative Works thereof, You may choose to offer,
      and charge a fee for, acceptance of support, warranty, indemnity,
      or other liability obligations and/or rights consistent with this
      License. However, in accepting such obligations, You may act only
      on Your own behalf and on Your sole responsibility, not on behalf
      of any other Contributor, and only if You agree to indemnify,
      defend, and hold each Contributor harmless for any liability
      incurred by, or claims asserted against, such Contributor by reason
      of your accepting any such warranty or additional liability.

   END OF TERMS AND CONDITIONS

   APPENDIX: How to apply the Apache License to your work.

      To apply the Apache License to your work, attach the following
      boilerplate notice, with the fields enclosed by brackets "[]"
      replaced with your own identifying information. (Don't include
      the brackets!)  The text should be enclosed in the appropriate
      comment syntax for the file format. We also recommend that a
      file or class name and description of purpose be included on the
      same "printed page" as the copyright notice for easier
      identification within third-party archives.

   Copyright [yyyy] [name of copyright owner]

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: README.md 1`] = `"# replace this"`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: eslint.config.mjs 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

import eslint from '@eslint/js';
import stylistic from '@stylistic/eslint-plugin';
import functional from 'eslint-plugin-functional';
import importPlugin from 'eslint-plugin-import';
import perfectionist from 'eslint-plugin-perfectionist';
import { defineConfig, globalIgnores } from 'eslint/config';
import tseslint from 'typescript-eslint';

export default defineConfig(
  eslint.configs.recommended,
  importPlugin.flatConfigs.recommended,
  importPlugin.flatConfigs.typescript,
  tseslint.configs.strictTypeChecked,
  perfectionist.configs['recommended-alphabetical'],
  stylistic.configs.recommended,
  functional.configs.off,
  {
    languageOptions: {
      parser: tseslint.parser,
      parserOptions: {
        projectService: true,
      },
    },
    rules: {
      '@typescript-eslint/ban-ts-comment': 'error',
      '@typescript-eslint/no-array-constructor': 'error',
      '@typescript-eslint/no-duplicate-enum-values': 'error',
      '@typescript-eslint/no-empty-object-type': 'error',
      '@typescript-eslint/no-explicit-any': 'error',
      '@typescript-eslint/no-extra-non-null-assertion': 'error',
      '@typescript-eslint/no-misused-new': 'error',
      '@typescript-eslint/no-namespace': 'error',
      '@typescript-eslint/no-non-null-asserted-optional-chain': 'error',
      '@typescript-eslint/no-require-imports': 'error',
      '@typescript-eslint/no-this-alias': 'error',
      '@typescript-eslint/no-unnecessary-type-constraint': 'error',
      '@typescript-eslint/no-unsafe-declaration-merging': 'error',
      '@typescript-eslint/no-unsafe-function-type': 'error',
      '@typescript-eslint/no-unused-expressions': 'error',
      '@typescript-eslint/no-unused-vars': 'warn',
      '@typescript-eslint/no-wrapper-object-types': 'error',
      '@typescript-eslint/prefer-as-const': 'error',
      '@typescript-eslint/prefer-namespace-keyword': 'error',
      '@typescript-eslint/triple-slash-reference': 'error',
      'accessor-pairs': 'off',
      'array-bracket-newline': ['off', 'consistent'],
      'array-bracket-spacing': ['error', 'never'],
      'array-callback-return': [
        'error',
        {
          allowImplicit: true,
          allowVoid: false,
          checkForEach: false,
        },
      ],
      'array-element-newline': [
        'off',
        {
          minItems: 3,
          multiline: true,
        },
      ],
      'arrow-body-style': [
        'error',
        'as-needed',
        {
          requireReturnForObjectLiteral: false,
        },
      ],
      'arrow-spacing': [
        'error',
        {
          after: true,
          before: true,
        },
      ],
      'block-scoped-var': 'error',
      'block-spacing': ['error', 'always'],
      'callback-return': 'off',
      camelcase: [
        'error',
        {
          ignoreDestructuring: false,
          ignoreGlobals: false,
          ignoreImports: false,
          properties: 'never',
        },
      ],
      'capitalized-comments': [
        'off',
        'never',
        {
          block: {
            ignoreConsecutiveComments: true,
            ignoreInlineComments: true,
            ignorePattern: '.*',
          },
          line: {
            ignoreConsecutiveComments: true,
            ignoreInlineComments: true,
            ignorePattern: '.*',
          },
        },
      ],
      'comma-dangle': [
        'error',
        {
          arrays: 'always-multiline',
          exports: 'always-multiline',
          functions: 'always-multiline',
          imports: 'always-multiline',
          objects: 'always-multiline',
        },
      ],
      'comma-spacing': [
        'error',
        {
          after: true,
          before: false,
        },
      ],
      'comma-style': [
        'error',
        'last',
        {
          exceptions: {
            ArrayExpression: false,
            ArrayPattern: false,
            ArrowFunctionExpression: false,
            CallExpression: false,
            FunctionDeclaration: false,
            FunctionExpression: false,
            ImportDeclaration: false,
            NewExpression: false,
            ObjectExpression: false,
            ObjectPattern: false,
            VariableDeclaration: false,
          },
        },
      ],
      complexity: ['off', 13],
      'computed-property-spacing': ['error', 'never'],
      'consistent-return': 'error',
      'consistent-this': 'off',
      'constructor-super': 'off',
      'default-case': [
        'error',
        {
          commentPattern: '^no default$',
        },
      ],
      'default-case-last': 'error',
      'default-param-last': 'error',
      'dot-location': ['error', 'property'],
      'dot-notation': [
        'error',
        {
          allowKeywords: true,
          allowPattern: '',
        },
      ],
      'eol-last': ['error', 'always'],
      eqeqeq: [
        'error',
        'always',
        {
          null: 'ignore',
        },
      ],
      'for-direction': 'error',
      'func-call-spacing': ['error', 'never'],
      'func-name-matching': [
        'off',
        'always',
        {
          considerPropertyDescriptor: true,
          includeCommonJSModuleExports: false,
        },
      ],
      'func-names': 'warn',
      'func-style': ['off', 'expression'],
      'function-call-argument-newline': ['error', 'consistent'],
      'generator-star-spacing': [
        'error',
        {
          after: true,
          before: false,
        },
      ],
      'getter-return': [
        'off',
        {
          allowImplicit: true,
        },
      ],
      'global-require': 'error',
      'grouped-accessor-pairs': 'error',
      'guard-for-in': 'error',
      'handle-callback-err': 'off',
      'id-denylist': 'off',
      'id-length': 'off',
      'id-match': 'off',
      'import/default': 'off',
      'import/dynamic-import-chunkname': [
        'off',
        {
          importFunctions: [],
          webpackChunknameFormat: '[0-9a-zA-Z-_/.]+',
        },
      ],
      'import/exports-last': 'off',
      'import/first': 'error',
      'import/group-exports': 'off',
      'import/imports-first': 'off',
      'import/max-dependencies': [
        'off',
        {
          max: 10,
        },
      ],
      'import/namespace': 'off',
      'import/newline-after-import': 'error',
      'import/no-absolute-path': 'error',
      'import/no-amd': 'error',
      'import/no-anonymous-default-export': [
        'off',
        {
          allowAnonymousClass: false,
          allowAnonymousFunction: false,
          allowArray: false,
          allowArrowFunction: false,
          allowLiteral: false,
          allowObject: false,
        },
      ],
      'import/no-commonjs': 'off',
      'import/no-cycle': [
        'error',
        {
          allowUnsafeDynamicCyclicDependency: false,
          disableScc: false,
          ignoreExternal: false,
          maxDepth: '∞',
        },
      ],
      'import/no-default-export': 'off',
      'import/no-deprecated': 'off',
      'import/no-duplicates': 'error',
      'import/no-dynamic-require': 'error',
      'import/no-import-module-exports': [
        'error',
        {
          exceptions: [],
        },
      ],
      'import/no-internal-modules': [
        'off',
        {
          allow: [],
        },
      ],
      'import/no-mutable-exports': 'error',
      'import/no-named-as-default': 'error',
      'import/no-named-as-default-member': 'error',
      'import/no-named-default': 'error',
      'import/no-named-export': 'off',
      'import/no-namespace': 'off',
      'import/no-nodejs-modules': 'off',
      'import/no-relative-parent-imports': 'off',
      'import/no-restricted-paths': 'off',
      'import/no-self-import': 'error',
      'import/no-unassigned-import': 'off',
      'import/no-unused-modules': [
        'off',
        {
          ignoreExports: [],
          missingExports: true,
          unusedExports: true,
        },
      ],
      'import/no-useless-path-segments': [
        'error',
        {
          commonjs: true,
        },
      ],
      'import/no-webpack-loader-syntax': 'error',
      'import/order': [
        'error',
        {
          distinctGroup: true,
          groups: [['builtin', 'external', 'internal']],
          named: false,
          sortTypesGroup: false,
          warnOnUnassignedImports: false,
        },
      ],
      'import/unambiguous': 'off',
      'init-declarations': 'off',
      'jsx-quotes': ['off', 'prefer-double'],
      'key-spacing': [
        'error',
        {
          afterColon: true,
          beforeColon: false,
        },
      ],
      'keyword-spacing': [
        'error',
        {
          after: true,
          before: true,
          overrides: {
            case: {
              after: true,
            },
            return: {
              after: true,
            },
            throw: {
              after: true,
            },
          },
        },
      ],
      'line-comment-position': [
        'off',
        {
          applyDefaultPatterns: true,
          ignorePattern: '',
          position: 'above',
        },
      ],
      'linebreak-style': ['error', 'unix'],
      'lines-around-comment': 'off',
      'lines-around-directive': [
        'error',
        {
          after: 'always',
          before: 'always',
        },
      ],
      'lines-between-class-members': [
        'error',
        'always',
        {
          exceptAfterSingleLine: false,
        },
      ],
      'max-depth': ['off', 4],
      'max-lines': [
        'off',
        {
          max: 300,
          skipBlankLines: true,
          skipComments: true,
        },
      ],
      'max-lines-per-function': [
        'off',
        {
          IIFEs: true,
          max: 50,
          skipBlankLines: true,
          skipComments: true,
        },
      ],
      'max-nested-callbacks': 'off',
      'max-params': ['error', 3],
      'max-statements': ['off', 10],
      'max-statements-per-line': [
        'off',
        {
          max: 1,
        },
      ],
      'multiline-comment-style': ['off', 'starred-block'],
      'multiline-ternary': ['off', 'never'],
      'new-cap': [
        'error',
        {
          capIsNew: false,
          capIsNewExceptions: [
            'Immutable.Map',
            'Immutable.Set',
            'Immutable.List',
          ],
          newIsCap: true,
          newIsCapExceptions: [],
          properties: true,
        },
      ],
      'new-parens': 'error',
      'newline-after-var': 'off',
      'newline-before-return': 'off',
      'newline-per-chained-call': [
        'error',
        {
          ignoreChainWithDepth: 4,
        },
      ],
      'no-alert': 'warn',
      'no-array-constructor': 'off',
      'no-async-promise-executor': 'error',
      'no-await-in-loop': 'error',
      'no-bitwise': 'error',
      'no-buffer-constructor': 'error',
      'no-caller': 'error',
      'no-case-declarations': 'error',
      'no-catch-shadow': 'off',
      'no-class-assign': 'off',
      'no-compare-neg-zero': 'error',
      'no-cond-assign': ['error', 'always'],
      'no-console': 'warn',
      'no-const-assign': 'off',
      'no-constant-condition': 'warn',
      'no-constructor-return': 'error',
      'no-continue': 'error',
      'no-control-regex': 'error',
      'no-debugger': 'error',
      'no-delete-var': 'error',
      'no-div-regex': 'off',
      'no-dupe-args': 'off',
      'no-dupe-class-members': 'off',
      'no-dupe-else-if': 'error',
      'no-dupe-keys': 'off',
      'no-duplicate-case': 'error',
      'no-duplicate-imports': 'off',
      'no-else-return': [
        'error',
        {
          allowElseIf: false,
        },
      ],
      'no-empty': 'error',
      'no-empty-character-class': 'error',
      'no-empty-function': [
        'error',
        {
          allow: ['arrowFunctions', 'functions', 'methods'],
        },
      ],
      'no-empty-pattern': 'error',
      'no-eq-null': 'off',
      'no-eval': 'error',
      'no-ex-assign': 'error',
      'no-extend-native': 'error',
      'no-extra-bind': 'error',
      'no-extra-boolean-cast': 'error',
      'no-extra-label': 'error',
      'no-extra-parens': [
        'off',
        'all',
        {
          conditionalAssign: true,
          enforceForArrowConditionals: false,
          ignoreJSX: 'all',
          nestedBinaryExpressions: false,
          returnAssign: false,
        },
      ],
      'no-extra-semi': 'error',
      'no-fallthrough': 'error',
      'no-floating-decimal': 'error',
      'no-func-assign': 'off',
      'no-global-assign': [
        'error',
        {
          exceptions: [],
        },
      ],
      'no-implicit-coercion': [
        'off',
        {
          allow: [],
          boolean: false,
          number: true,
          string: true,
        },
      ],
      'no-implicit-globals': 'off',
      'no-implied-eval': 'error',
      'no-import-assign': 'off',
      'no-inline-comments': 'off',
      'no-inner-declarations': 'error',
      'no-invalid-regexp': 'error',
      'no-invalid-this': 'off',
      'no-irregular-whitespace': 'error',
      'no-iterator': 'error',
      'no-label-var': 'error',
      'no-labels': [
        'error',
        {
          allowLoop: false,
          allowSwitch: false,
        },
      ],
      'no-lone-blocks': 'error',
      'no-lonely-if': 'error',
      'no-loop-func': 'error',
      'no-loss-of-precision': 'error',
      'no-magic-numbers': [
        'off',
        {
          detectObjects: false,
          enforceConst: true,
          ignore: [],
          ignoreArrayIndexes: true,
        },
      ],
      'no-misleading-character-class': 'error',
      'no-mixed-operators': [
        'error',
        {
          allowSamePrecedence: false,
          groups: [
            ['%', '**'],
            ['%', '+'],
            ['%', '-'],
            ['%', '*'],
            ['%', '/'],
            ['/', '*'],
            ['&', '|', '<<', '>>', '>>>'],
            ['==', '!=', '===', '!=='],
            ['&&', '||'],
          ],
        },
      ],
      'no-mixed-requires': ['off', false],
      'no-mixed-spaces-and-tabs': 'error',
      'no-multi-assign': 'error',
      'no-multi-spaces': [
        'error',
        {
          ignoreEOLComments: false,
        },
      ],
      'no-multi-str': 'error',
      'no-multiple-empty-lines': [
        'error',
        {
          max: 1,
          maxBOF: 0,
          maxEOF: 0,
        },
      ],
      'no-native-reassign': 'off',
      'no-negated-condition': 'off',
      'no-negated-in-lhs': 'off',
      'no-nested-ternary': 'error',
      'no-new-func': 'error',
      'no-new-native-nonconstructor': 'off',
      'no-new-object': 'error',
      'no-new-require': 'error',
      'no-new-symbol': 'off',
      'no-new-wrappers': 'error',
      'no-nonoctal-decimal-escape': 'error',
      'no-obj-calls': 'off',
      'no-octal': 'error',
      'no-octal-escape': 'error',
      'no-param-reassign': [
        'error',
        {
          ignorePropertyModificationsFor: [
            'acc',
            'accumulator',
            'e',
            'ctx',
            'context',
            'req',
            'request',
            'res',
            'response',
            '$scope',
            'staticContext',
          ],
          props: true,
        },
      ],
      'no-path-concat': 'error',
      'no-plusplus': 'error',
      'no-process-env': 'off',
      'no-process-exit': 'off',
      'no-promise-executor-return': 'error',
      'no-proto': 'error',
      'no-prototype-builtins': 'error',
      'no-redeclare': 'off',
      'no-regex-spaces': 'error',
      'no-restricted-exports': [
        'error',
        {
          restrictedNamedExports: ['default', 'then'],
        },
      ],
      'no-restricted-globals': [
        'error',
        {
          message:
            'Use Number.isFinite instead https://github.com/airbnb/javascript#standard-library--isfinite',
          name: 'isFinite',
        },
        {
          message:
            'Use Number.isNaN instead https://github.com/airbnb/javascript#standard-library--isnan',
          name: 'isNaN',
        },
        'addEventListener',
        'blur',
        'close',
        'closed',
        'confirm',
        'defaultStatus',
        'defaultstatus',
        'event',
        'external',
        'find',
        'focus',
        'frameElement',
        'frames',
        'history',
        'innerHeight',
        'innerWidth',
        'length',
        'location',
        'locationbar',
        'menubar',
        'moveBy',
        'moveTo',
        'name',
        'onblur',
        'onerror',
        'onfocus',
        'onload',
        'onresize',
        'onunload',
        'open',
        'opener',
        'opera',
        'outerHeight',
        'outerWidth',
        'pageXOffset',
        'pageYOffset',
        'parent',
        'print',
        'removeEventListener',
        'resizeBy',
        'resizeTo',
        'screen',
        'screenLeft',
        'screenTop',
        'screenX',
        'screenY',
        'scroll',
        'scrollbars',
        'scrollBy',
        'scrollTo',
        'scrollX',
        'scrollY',
        'self',
        'status',
        'statusbar',
        'stop',
        'toolbar',
        'top',
      ],
      'no-restricted-imports': [
        'off',
        {
          paths: [],
          patterns: [],
        },
      ],
      'no-restricted-modules': 'off',
      'no-restricted-properties': [
        'error',
        {
          message: 'arguments.callee is deprecated',
          object: 'arguments',
          property: 'callee',
        },
        {
          message: 'Please use Number.isFinite instead',
          object: 'global',
          property: 'isFinite',
        },
        {
          message: 'Please use Number.isFinite instead',
          object: 'self',
          property: 'isFinite',
        },
        {
          message: 'Please use Number.isFinite instead',
          object: 'window',
          property: 'isFinite',
        },
        {
          message: 'Please use Number.isNaN instead',
          object: 'global',
          property: 'isNaN',
        },
        {
          message: 'Please use Number.isNaN instead',
          object: 'self',
          property: 'isNaN',
        },
        {
          message: 'Please use Number.isNaN instead',
          object: 'window',
          property: 'isNaN',
        },
        {
          message: 'Please use Object.defineProperty instead.',
          property: '__defineGetter__',
        },
        {
          message: 'Please use Object.defineProperty instead.',
          property: '__defineSetter__',
        },
        {
          message: 'Use the exponentiation operator (**) instead.',
          object: 'Math',
          property: 'pow',
        },
      ],
      'no-restricted-syntax': [
        'error',
        {
          message:
            'for..in loops iterate over the entire prototype chain, which is virtually never what you want. Use Object.{keys,values,entries}, and iterate over the resulting array.',
          selector: 'ForInStatement',
        },
        {
          message:
            'iterators/generators require regenerator-runtime, which is too heavyweight for this guide to allow them. Separately, loops should be avoided in favor of array iterations.',
          selector: 'ForOfStatement',
        },
        {
          message:
            'Labels are a form of GOTO; using them makes code confusing and hard to maintain and understand.',
          selector: 'LabeledStatement',
        },
        {
          message:
            '\`with\` is disallowed in strict mode because it makes code impossible to predict and optimize.',
          selector: 'WithStatement',
        },
      ],
      'no-return-assign': ['error', 'always'],
      'no-return-await': 'error',
      'no-script-url': 'error',
      'no-self-assign': [
        'error',
        {
          props: true,
        },
      ],
      'no-self-compare': 'error',
      'no-sequences': 'error',
      'no-setter-return': 'off',
      'no-shadow-restricted-names': 'error',
      'no-spaced-func': 'error',
      'no-sparse-arrays': 'error',
      'no-sync': 'off',
      'no-tabs': 'error',
      'no-template-curly-in-string': 'error',
      'no-ternary': 'off',
      'no-this-before-super': 'off',
      'no-throw-literal': 'error',
      'no-trailing-spaces': [
        'error',
        {
          ignoreComments: false,
          skipBlankLines: false,
        },
      ],
      'no-undef': 'off',
      'no-undef-init': 'error',
      'no-undefined': 'off',
      'no-unexpected-multiline': 'error',
      'no-unmodified-loop-condition': 'off',
      'no-unneeded-ternary': [
        'error',
        {
          defaultAssignment: false,
        },
      ],
      'no-unreachable': 'off',
      'no-unreachable-loop': [
        'error',
        {
          ignore: [],
        },
      ],
      'no-unsafe-finally': 'error',
      'no-unsafe-negation': 'off',
      'no-unsafe-optional-chaining': [
        'error',
        {
          disallowArithmeticOperators: true,
        },
      ],
      'no-unused-expressions': [
        'off',
        {
          allowShortCircuit: false,
          allowTaggedTemplates: false,
          allowTernary: false,
          enforceForJSX: false,
        },
      ],
      'no-unused-labels': 'error',
      'no-unused-private-class-members': 'off',
      'no-use-before-define': [
        'error',
        {
          classes: true,
          functions: true,
          variables: true,
        },
      ],
      'no-useless-backreference': 'error',
      'no-useless-call': 'off',
      'no-useless-catch': 'error',
      'no-useless-computed-key': 'error',
      'no-useless-concat': 'error',
      'no-useless-escape': 'error',
      'no-useless-rename': [
        'error',
        {
          ignoreDestructuring: false,
          ignoreExport: false,
          ignoreImport: false,
        },
      ],
      'no-useless-return': 'error',
      'no-var': 'error',
      'no-void': 'error',
      'no-warning-comments': [
        'off',
        {
          location: 'start',
          terms: ['todo', 'fixme', 'xxx'],
        },
      ],
      'no-whitespace-before-property': 'error',
      'no-with': 'off',
      'object-curly-spacing': ['error', 'always'],
      'object-property-newline': [
        'error',
        {
          allowAllPropertiesOnSameLine: true,
          allowMultiplePropertiesPerLine: false,
        },
      ],
      'object-shorthand': [
        'error',
        'always',
        {
          avoidQuotes: true,
          ignoreConstructors: false,
        },
      ],
      'one-var': ['error', 'never'],
      'one-var-declaration-per-line': ['error', 'always'],
      'operator-assignment': ['error', 'always'],
      'padded-blocks': [
        'error',
        {
          blocks: 'never',
          classes: 'never',
          switches: 'never',
        },
        {
          allowSingleLineBlocks: true,
        },
      ],
      'padding-line-between-statements': 'off',
      'prefer-arrow-callback': [
        'error',
        {
          allowNamedFunctions: false,
          allowUnboundThis: true,
        },
      ],
      'prefer-const': [
        'error',
        {
          destructuring: 'any',
          ignoreReadBeforeAssign: true,
        },
      ],
      'prefer-destructuring': [
        'error',
        {
          AssignmentExpression: {
            array: true,
            object: false,
          },
          VariableDeclarator: {
            array: false,
            object: true,
          },
        },
        {
          enforceForRenamedProperties: false,
        },
      ],
      'prefer-exponentiation-operator': 'error',
      'prefer-named-capture-group': 'off',
      'prefer-numeric-literals': 'error',
      'prefer-object-spread': 'error',
      'prefer-promise-reject-errors': [
        'error',
        {
          allowEmptyReject: true,
        },
      ],
      'prefer-reflect': 'off',
      'prefer-regex-literals': [
        'error',
        {
          disallowRedundantWrapping: true,
        },
      ],
      'prefer-rest-params': 'error',
      'prefer-spread': 'error',
      'prefer-template': 'error',
      'quote-props': [
        'error',
        'as-needed',
        {
          keywords: false,
          numbers: false,
          unnecessary: true,
        },
      ],
      quotes: [
        'error',
        'single',
        {
          avoidEscape: true,
        },
      ],
      radix: 'error',
      'require-atomic-updates': 'off',
      'require-await': 'off',
      'require-jsdoc': 'off',
      'require-unicode-regexp': 'off',
      'require-yield': 'error',
      'rest-spread-spacing': ['error', 'never'],
      semi: ['error', 'always'],
      'semi-spacing': [
        'error',
        {
          after: true,
          before: false,
        },
      ],
      'semi-style': ['error', 'last'],
      'sort-imports': [
        'off',
        {
          ignoreCase: false,
          ignoreDeclarationSort: false,
          ignoreMemberSort: false,
          memberSyntaxSortOrder: ['none', 'all', 'multiple', 'single'],
        },
      ],
      'sort-keys': [
        'off',
        'asc',
        {
          caseSensitive: false,
          natural: true,
        },
      ],
      'sort-vars': 'off',
      'space-before-blocks': 'error',
      'space-before-function-paren': [
        'error',
        {
          anonymous: 'always',
          asyncArrow: 'always',
          named: 'never',
        },
      ],
      'space-in-parens': ['error', 'never'],
      'space-infix-ops': 'error',
      'space-unary-ops': [
        'error',
        {
          nonwords: false,
          overrides: {},
          words: true,
        },
      ],
      'spaced-comment': [
        'error',
        'always',
        {
          block: {
            balanced: true,
            exceptions: ['-', '+'],
            markers: ['=', '!', ':', '::'],
          },
          line: {
            exceptions: ['-', '+'],
            markers: ['=', '!', '/'],
          },
        },
      ],
      strict: ['error', 'never'],
      'switch-colon-spacing': [
        'error',
        {
          after: true,
          before: false,
        },
      ],
      'symbol-description': 'error',
      'template-curly-spacing': 'error',
      'template-tag-spacing': ['error', 'never'],
      'unicode-bom': ['error', 'never'],
      'use-isnan': 'error',
      'valid-jsdoc': 'off',
      'valid-typeof': [
        'error',
        {
          requireStringLiterals: true,
        },
      ],
      'vars-on-top': 'error',
      'wrap-iife': [
        'error',
        'outside',
        {
          functionPrototypeMethods: false,
        },
      ],
      'wrap-regex': 'off',
      'yield-star-spacing': ['error', 'after'],
      yoda: 'error',
      '@stylistic/arrow-parens': ['error', 'as-needed'],
      '@stylistic/brace-style': 'off',
      '@stylistic/indent': 'off',
      '@stylistic/indent-binary-ops': 'off',
      '@stylistic/member-delimiter-style': [
        'error',
        {
          multiline: {
            delimiter: 'semi',
            requireLast: true,
          },
          singleline: {
            delimiter: 'semi',
            requireLast: false,
          },
        },
      ],
      '@stylistic/operator-linebreak': 'off',
      '@stylistic/quote-props': ['error', 'as-needed'],
      '@stylistic/quotes': 'off',
      '@stylistic/semi': ['error', 'always'],
      '@typescript-eslint/no-unnecessary-template-expression': 'error',
      '@typescript-eslint/no-unused-vars': [
        'error',
        {
          args: 'all',
          argsIgnorePattern: '^_',
          caughtErrors: 'all',
          caughtErrorsIgnorePattern: '^_',
          destructuredArrayIgnorePattern: '^_',
          ignoreRestSiblings: true,
          varsIgnorePattern: '^_',
        },
      ],
      '@typescript-eslint/restrict-template-expressions': [
        'error',
        {
          allowBoolean: true,
          allowNever: true,
          allowNullish: true,
          allowNumber: true,
        },
      ],
      'functional/immutable-data': [
        'error',
        { ignoreClasses: 'fieldsOnly', ignoreMapsAndSets: true },
      ],
      'functional/no-let': 'error',
      'import/export': 'off',
      'import/no-unresolved': [
        'error',
        {
          caseSensitive: true,
          caseSensitiveStrict: false,
          commonjs: true,
          ignore: ['aws-lambda', 'vitest/config'],
        },
      ],
      'no-else-return': 'error',
      'no-lonely-if': 'error',
      'no-nested-ternary': 'error',
      'no-template-curly-in-string': 'error',
      'object-shorthand': ['error', 'always'],
      'prefer-template': 'error',
    },
    settings: {
      'import/resolver': {
        typescript: {
          project: './tsconfig.json',
        },
      },
    },
  },
  {
    files: ['**/*.test.ts', '**/*.int-test.ts'],
    rules: {
      '@typescript-eslint/require-await': 'off',
    },
  },
  globalIgnores(['**/build/*', '**/coverage/*', '**/node_modules/*', 'examples/**/*', 'packages/**/*', 'eslint.config.mjs']),
);
"
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: package.json 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".",
  "author": {
    "email": "authorEmail",
    "name": "authorName",
    "organization": false,
  },
  "devDependencies": {
    "@commitlint/cli": "*",
    "@commitlint/config-conventional": "*",
    "@eslint/js": "*",
    "@stylistic/eslint-plugin": "*",
    "@types/node": "^22",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "@vitest/coverage-v8": "*",
    "commit-and-tag-version": "^12",
    "constructs": "^10.0.0",
    "eslint": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-functional": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-perfectionist": "*",
    "husky": "*",
    "lint-staged": "*",
    "prettier": "*",
    "projen": "*",
    "ts-deepmerge": "*",
    "ts-node": "*",
    "typescript": "*",
    "typescript-eslint": "*",
    "vitest": "*",
  },
  "engines": {
    "node": ">= 22.0.0",
  },
  "license": "Apache-2.0",
  "name": "test-project",
  "publishConfig": {
    "access": "public",
  },
  "repository": {
    "type": "git",
    "url": "https://github.com/hbict/test-project.git",
  },
  "scripts": {
    "build": "npx projen build",
    "bump": "npx projen bump",
    "clobber": "npx projen clobber",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "lint": "npx projen lint",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "prepare": "husky",
    "projen": "npx projen",
    "release": "npx projen release",
    "test": "vitest run --passWithNoTests",
    "test:coverage": "npx projen test:coverage",
    "test:update-snapshots": "npx projen test:update-snapshots",
    "test:watch": "npx projen test:watch",
    "unbump": "npx projen unbump",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "version": "0.0.0",
}
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: tsconfig.json 1`] = `
{
  "compilerOptions": {
    "allowSyntheticDefaultImports": true,
    "alwaysStrict": true,
    "baseUrl": ".",
    "declaration": true,
    "emitDecoratorMetadata": true,
    "esModuleInterop": true,
    "experimentalDecorators": true,
    "inlineSources": true,
    "lib": [
      "esnext",
    ],
    "module": "node16",
    "moduleResolution": "node16",
    "noEmitOnError": false,
    "noFallthroughCasesInSwitch": true,
    "noImplicitAny": true,
    "noImplicitReturns": true,
    "noImplicitThis": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "outDir": "build",
    "resolveJsonModule": true,
    "rootDir": ".",
    "skipLibCheck": true,
    "sourceMap": true,
    "strict": true,
    "strictNullChecks": true,
    "strictPropertyInitialization": true,
    "stripInternal": true,
    "target": "es2024",
  },
  "exclude": [
    "**/node_modules/*",
    "**/build/*",
  ],
  "include": [
    "src/**/*.ts",
    ".projenrc.ts",
    "__tests__/**/*.ts",
    "vitest.config.mts",
    "projenrc/**/*.ts",
  ],
}
`;

exports[`CalmsTypescriptApp > should have the correct contents for the required file: vitest.config.mts 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.ts and run "npx projen".

import { defineConfig } from 'vitest/config';

export default defineConfig({
  test: {
    exclude: ['**/dist/**', '**/lib/**', '**/node_modules/**'],
    globals: true,
    include: ['**/*.test.ts?(x)'],
  },
});
"
`;
